2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 549351 – an unitialized variable in PyGLib

	* glib/pygmainloop.c (pyg_main_loop_init): Initialize
	`is_running'.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547633 – cannot create new threads when pygtk is used

	* glib/pyglib.c (pyglib_notify_on_enabling_threads): New function.
	(pyglib_enable_threads): Invoke all callbacks added with new
	pyglib_notify_on_enabling_threads().

	* gobject/gobjectmodule.c (pyg_note_threads_enabled): New
	function (callback for new pyglib_notify_on_enabling_threads()).
	(PYGLIB_MODULE_START): Initialize
	'pygobject_api_functions.threads_enabled' and also watch for
	thread being enabled later on.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547088 – wrap g_content_types_get_registered()

	* gio/gio.override (_wrap_g_drive_get_volumes): Fix refleak.
	(_wrap_g_content_types_get_registered): New function.

	* gio/gfileenumerator.override (_wrap_g_file_enumerator_next_files_finish):
	Fix refleak.

	* gio/gvolumemonitor.override (_wrap_g_volume_monitor_get_connected_drives):
	Fix refleak.
	(_wrap_g_volume_monitor_get_volumes): Likewise.
	(_wrap_g_volume_monitor_get_mounts): Likewise.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547494 – gio.InputStream.read() looks broken

	* gio/gio.defs (gio.InputStream.read_part): Rename from read(),
	document.
	(gio.InputStream.read): Rename from read_all(), document.
	(gio.OutputStream.write_part): Rename from write(), document.
	(gio.OutputStream.write): Rename from write_all(), document.

	* gio/ginputstream.override (_wrap_g_input_stream_read): Fix
	several bugs.
	(_wrap_g_input_stream_read_all): New function.

	* gio/goutputstream.override (_wrap_g_output_stream_write_all):
	New function.

	* tests/test_gio.py (TestInputStream.testRead): Add more tests.
	(TestInputStream.test_read_part): New test.
	(TestInputStream._read_in_loop): New helper method.
	(TestOutputStream.test_write_part): New test.
